--- a/StarWarsEncyclopedia-GetPeople/Base.lproj/Main.storyboard
+++ b/StarWarsEncyclopedia-GetPeople/Base.lproj/Main.storyboard
@@ -42,6 +42,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="KYf-XG-nFH" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qwO-Oc-afh">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -57,7 +58,7 @@
         <!--Films-->
         <scene sceneID="8vV-cc-utS">
             <objects>
-                <tableViewController id="Cd2-R6-gyy" sceneMemberID="viewController">
+                <tableViewController id="Cd2-R6-gyy" customClass="FilmsViewController" customModule="StarWarsEncyclopedia_GetPeople" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4u3-ik-VP4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
